test/cases/negative/resolver.ts
const a = customResolved1(1)
const b = customResolved2(1)
const c = customNamedResolved2(1)

 TODO: remove this comment after resolver is supported
